tela gerenciamento de doacoes semi-pronta

--- a/python/CRUD-panel.ipynb
+++ b/python/CRUD-panel.ipynb
@@ -233,6 +233,7 @@
     "        btn_go_crud,\n",
     "        btn_go_graficos,\n",
     "        btn_go_campanhas,\n",
+    "        btn_go_doacoes,\n",
     "        align=\"center\",\n",
     "        sizing_mode=\"stretch_width\",\n",
     "        margin=(50,50,50,50)\n",
@@ -250,7 +251,8 @@
     "# Criação dos botões da Home\n",
     "btn_go_crud = pn.widgets.Button(name=\"📋 Ir para CRUD\", button_type=\"primary\", width=250)\n",
     "btn_go_graficos = pn.widgets.Button(name=\"📊 Ir para Gráficos\", button_type=\"success\", width=250)\n",
-    "btn_go_campanhas = pn.widgets.Button(name=\"📢 Ir para Campanhas\", button_type=\"warning\", width=250)\n"
+    "btn_go_campanhas = pn.widgets.Button(name=\"📢 Ir para Campanhas\", button_type=\"warning\", width=250)\n",
+    "btn_go_doacoes = pn.widgets.Button(name=\"🎁 Ir para Doações\", button_type=\"primary\", width=250)"
    ]
   },
   {
@@ -1045,7 +1047,8 @@
     "# Conecta os botões da Home às funções de navegação\n",
     "btn_go_crud.on_click(lambda event: go_to_crud())\n",
     "btn_go_graficos.on_click(lambda event: go_to_graficos())\n",
-    "btn_go_campanhas.on_click(lambda event: go_to_campanhas())\n"
+    "btn_go_campanhas.on_click(lambda event: go_to_campanhas())\n",
+    "btn_go_doacoes.on_click(lambda event: go_to_doacoes())"
    ]
   },
   {
@@ -1072,6 +1075,251 @@
     "    pn.pane.Markdown(\"# 🎁 Sistema de Doações\"),\n",
     "    main_area\n",
     ").servable()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2bef525",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ===== TELA DE DOAÇÕES =====\n",
+    "\n",
+    "def get_doadores():\n",
+    "    \"\"\"Busca todos os doadores já cadastrados\"\"\"\n",
+    "    try:\n",
+    "        query = \"\"\"\n",
+    "        SELECT DISTINCT u.cpf_cnpj, u.nome\n",
+    "        FROM usuario u\n",
+    "        JOIN doador d ON u.cpf_cnpj = d.cpf_cnpj_d\n",
+    "        ORDER BY u.nome\n",
+    "        \"\"\"\n",
+    "        df = pd.read_sql_query(query, engine)\n",
+    "        return dict(zip(df['nome'], df['cpf_cnpj']))\n",
+    "    except Exception as e:\n",
+    "        return {}\n",
+    "\n",
+    "def get_campanhas_ativas():\n",
+    "    \"\"\"Busca apenas campanhas com status Ativa\"\"\"\n",
+    "    try:\n",
+    "        query = \"\"\"\n",
+    "        SELECT\n",
+    "            c.id_campanha,\n",
+    "            CONCAT(u.nome, ' - ', c.nome) AS campanha_nome\n",
+    "        FROM campanha c\n",
+    "        INNER JOIN instituicao i\n",
+    "         ON c.cpf_cnpj_i = i.cpf_cnpj_i\n",
+    "        INNER JOIN usuario u\n",
+    "            ON u.cpf_cnpj = i.cpf_cnpj_i\n",
+    "        WHERE c.status = 'Ativa'\n",
+    "        ORDER BY u.nome, c.nome;\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        df = pd.read_sql_query(query, engine)\n",
+    "        return dict(zip(df['campanha_nome'], df['id_campanha']))\n",
+    "    except Exception as e:\n",
+    "        return {}\n",
+    "\n",
+    "# Widgets para doações\n",
+    "doadores_dict = get_doadores()\n",
+    "doadores_select = pn.widgets.Select(\n",
+    "    name=\"Doador\",\n",
+    "    options=doadores_dict,\n",
+    "    sizing_mode=\"stretch_width\"\n",
+    ")\n",
+    "\n",
+    "campanhas_ativas_dict = get_campanhas_ativas()\n",
+    "campanhas_select = pn.widgets.Select(\n",
+    "    name=\"Campanha Ativa\",\n",
+    "    options=campanhas_ativas_dict,\n",
+    "    sizing_mode=\"stretch_width\"\n",
+    ")\n",
+    "\n",
+    "data_doacao = pn.widgets.DatePicker(\n",
+    "    name=\"Data da Doação\",\n",
+    "    sizing_mode=\"stretch_width\"\n",
+    ")\n",
+    "\n",
+    "# Botões de ações para doações\n",
+    "btn_consultar_doacoes = pn.widgets.Button(name='Consultar', button_type='primary')\n",
+    "btn_registrar_doacao = pn.widgets.Button(name='Registrar Doação', button_type='success')\n",
+    "btn_atualizar_doacao = pn.widgets.Button(name='Atualizar', button_type='warning')\n",
+    "btn_excluir_doacao = pn.widgets.Button(name='Excluir', button_type='danger')\n",
+    "\n",
+    "def on_consultar_doacoes(event):\n",
+    "    \"\"\"Consulta todas as doações registradas\"\"\"\n",
+    "    try:\n",
+    "        query = \"\"\"\n",
+    "        SELECT d.id_doacao, u.nome AS doador, c.nome AS campanha, d.data_doacao\n",
+    "        FROM doacao d\n",
+    "        JOIN doador doe ON d.cpf_cnpj_d = doe.cpf_cnpj_d\n",
+    "        JOIN usuario u ON doe.cpf_cnpj_d = u.cpf_cnpj\n",
+    "        JOIN campanha c ON d.id_campanha = c.id_campanha\n",
+    "        ORDER BY d.data_doacao DESC\n",
+    "        \"\"\"\n",
+    "        df = pd.read_sql_query(query, engine)\n",
+    "        return pn.widgets.Tabulator(df, show_index=False, sizing_mode='stretch_width', height=400)\n",
+    "    except Exception as e:\n",
+    "        return pn.pane.Alert(f'Erro ao consultar: {str(e)}', alert_type='danger')\n",
+    "\n",
+    "def on_registrar_doacao(event):\n",
+    "    \"\"\"Registra uma nova doação\"\"\"\n",
+    "    try:\n",
+    "        if not doadores_select.value or not campanhas_select.value:\n",
+    "            pn.state.notifications.warning('Doador e Campanha Ativa são obrigatórios!')\n",
+    "            return\n",
+    "        \n",
+    "        if not data_doacao.value:\n",
+    "            pn.state.notifications.warning('Data da doação é obrigatória!')\n",
+    "            return\n",
+    "        \n",
+    "        cursor = con.cursor()\n",
+    "        \n",
+    "        # Verifica se a campanha está realmente ativa\n",
+    "        cursor.execute(\n",
+    "            \"SELECT status FROM campanha WHERE id_campanha=%s AND status='Ativa'\",\n",
+    "            (campanhas_select.value,)\n",
+    "        )\n",
+    "        result = cursor.fetchone()\n",
+    "        \n",
+    "        if not result:\n",
+    "            cursor.close()\n",
+    "            pn.state.notifications.warning('Esta campanha não está mais ativa!')\n",
+    "            return\n",
+    "        \n",
+    "        # Registra a doação\n",
+    "        cursor.execute(\n",
+    "            \"\"\"INSERT INTO doacao(data_doacao, cpf_cnpj_d, id_campanha) \n",
+    "               VALUES (%s, %s, %s)\"\"\",\n",
+    "            (data_doacao.value, doadores_select.value, campanhas_select.value)\n",
+    "        )\n",
+    "        con.commit()\n",
+    "        cursor.close()\n",
+    "        pn.state.notifications.success('Doação registrada com sucesso!')\n",
+    "        \n",
+    "        # Limpar campos\n",
+    "        data_doacao.value = None\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        con.rollback()\n",
+    "        if 'cursor' in locals():\n",
+    "            cursor.close()\n",
+    "        pn.state.notifications.error(f'Erro ao registrar: {str(e)}')\n",
+    "\n",
+    "def on_atualizar_doacao(event):\n",
+    "    \"\"\"Atualiza uma doação existente\"\"\"\n",
+    "    try:\n",
+    "        if not doadores_select.value or not campanhas_select.value:\n",
+    "            pn.state.notifications.warning('Doador e Campanha Ativa são obrigatórios!')\n",
+    "            return\n",
+    "        \n",
+    "        if not data_doacao.value:\n",
+    "            pn.state.notifications.warning('Data da doação é obrigatória!')\n",
+    "            return\n",
+    "        \n",
+    "        cursor = con.cursor()\n",
+    "        \n",
+    "        # Busca doação recente do doador para essa campanha\n",
+    "        cursor.execute(\n",
+    "            \"\"\"SELECT id_doacao FROM doacao \n",
+    "               WHERE cpf_cnpj_d=%s AND id_campanha=%s\n",
+    "               ORDER BY data_doacao DESC LIMIT 1\"\"\",\n",
+    "            (doadores_select.value, campanhas_select.value)\n",
+    "        )\n",
+    "        result = cursor.fetchone()\n",
+    "        \n",
+    "        if not result:\n",
+    "            cursor.close()\n",
+    "            pn.state.notifications.warning('Nenhuma doação encontrada para este doador nesta campanha!')\n",
+    "            return\n",
+    "        \n",
+    "        # Atualiza a doação\n",
+    "        cursor.execute(\n",
+    "            \"\"\"UPDATE doacao SET data_doacao=%s \n",
+    "               WHERE id_doacao=%s\"\"\",\n",
+    "            (data_doacao.value, result[0])\n",
+    "        )\n",
+    "        con.commit()\n",
+    "        cursor.close()\n",
+    "        pn.state.notifications.success('Doação atualizada com sucesso!')\n",
+    "        \n",
+    "        # Limpar campos\n",
+    "        data_doacao.value = None\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        con.rollback()\n",
+    "        if 'cursor' in locals():\n",
+    "            cursor.close()\n",
+    "        pn.state.notifications.error(f'Erro ao atualizar: {str(e)}')\n",
+    "\n",
+    "def on_excluir_doacao(event):\n",
+    "    \"\"\"Exclui uma doação\"\"\"\n",
+    "    try:\n",
+    "        if not doadores_select.value or not campanhas_select.value:\n",
+    "            pn.state.notifications.warning('Doador e Campanha Ativa são obrigatórios!')\n",
+    "            return\n",
+    "        \n",
+    "        cursor = con.cursor()\n",
+    "        \n",
+    "        # Busca doação recente do doador para essa campanha\n",
+    "        cursor.execute(\n",
+    "            \"\"\"SELECT id_doacao FROM doacao \n",
+    "               WHERE cpf_cnpj_d=%s AND id_campanha=%s\n",
+    "               ORDER BY data_doacao DESC LIMIT 1\"\"\",\n",
+    "            (doadores_select.value, campanhas_select.value)\n",
+    "        )\n",
+    "        result = cursor.fetchone()\n",
+    "        \n",
+    "        if not result:\n",
+    "            cursor.close()\n",
+    "            pn.state.notifications.warning('Nenhuma doação encontrada para excluir!')\n",
+    "            return\n",
+    "        \n",
+    "        # Deleta a doação\n",
+    "        cursor.execute(\n",
+    "            \"DELETE FROM doacao WHERE id_doacao=%s\",\n",
+    "            (result[0],)\n",
+    "        )\n",
+    "        con.commit()\n",
+    "        cursor.close()\n",
+    "        pn.state.notifications.success('Doação excluída com sucesso!')\n",
+    "        \n",
+    "        # Limpar campos\n",
+    "        data_doacao.value = None\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        con.rollback()\n",
+    "        if 'cursor' in locals():\n",
+    "            cursor.close()\n",
+    "        pn.state.notifications.error(f'Erro ao excluir: {str(e)}')\n",
+    "\n",
+    "btn_consultar_doacoes.on_click(on_consultar_doacoes)\n",
+    "btn_registrar_doacao.on_click(on_registrar_doacao)\n",
+    "btn_atualizar_doacao.on_click(on_atualizar_doacao)\n",
+    "btn_excluir_doacao.on_click(on_excluir_doacao)\n",
+    "\n",
+    "def create_doacoes_view():\n",
+    "    \"\"\"Cria a tela de doações\"\"\"\n",
+    "    doacoes_layout = pn.Column(\n",
+    "        pn.pane.Markdown(\"### 🎁 Registrar Doação\"),\n",
+    "        pn.pane.Markdown(\"**Selecione um doador e uma campanha ativa para registrar uma doação**\"),\n",
+    "        doadores_select,\n",
+    "        campanhas_select,\n",
+    "        data_doacao,\n",
+    "        pn.Row(btn_consultar_doacoes, btn_registrar_doacao),\n",
+    "        pn.Row(btn_atualizar_doacao, btn_excluir_doacao),\n",
+    "        pn.Spacer(height=20),\n",
+    "        pn.bind(on_consultar_doacoes, btn_consultar_doacoes),\n",
+    "        create_btn_voltar(),\n",
+    "        sizing_mode='stretch_width',\n",
+    "        margin=(20, 20, 20, 20)\n",
+    "    )\n",
+    "    return doacoes_layout\n",
+    "\n",
+    "def go_to_doacoes():\n",
+    "    main_area.clear()\n",
+    "    main_area.append(create_doacoes_view())"
    ]
   }
  ],
