gerenciamento de campanha semi feito

--- a/python/CRUD-panel.ipynb
+++ b/python/CRUD-panel.ipynb
@@ -164,9 +164,8 @@
     "# Define a string de conexão para o SQLAlchemy, utilizando as variáveis do .env\n",
     "# Cria o objeto engine do SQLAlchemy que será usado para conectar e executar comandos no banco\n",
     "\n",
-    "cnx = f'postgresql://{DB_USER}:{DB_PASS}@{DB_HOST}/{DB_NAME}'\n",
-    "\n",
-    "sqlalchemy.create_engine(cnx)"
+    "cnx_string = f'postgresql://{DB_USER}:{DB_PASS}@{DB_HOST}/{DB_NAME}'\n",
+    "engine = sqlalchemy.create_engine(cnx_string)"
    ]
   },
   {
@@ -182,7 +181,7 @@
     "\n",
     "\n",
     "query = \"select * from usuario;\" \n",
-    "df = pd.read_sql_query(query, cnx)\n",
+    "df = pd.read_sql_query(query, engine)\n",
     "\n",
     "df.head()"
    ]
@@ -233,11 +232,25 @@
     "        pn.Spacer(height=20),\n",
     "        btn_go_crud,\n",
     "        btn_go_graficos,\n",
+    "        btn_go_campanhas,\n",
     "        align=\"center\",\n",
     "        sizing_mode=\"stretch_width\",\n",
     "        margin=(50,50,50,50)\n",
     "    )\n",
     "    return home"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e932c321",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Criação dos botões da Home\n",
+    "btn_go_crud = pn.widgets.Button(name=\"📋 Ir para CRUD\", button_type=\"primary\", width=250)\n",
+    "btn_go_graficos = pn.widgets.Button(name=\"📊 Ir para Gráficos\", button_type=\"success\", width=250)\n",
+    "btn_go_campanhas = pn.widgets.Button(name=\"📢 Ir para Campanhas\", button_type=\"warning\", width=250)\n"
    ]
   },
   {
@@ -393,7 +406,7 @@
     "    LEFT JOIN instituicao i ON u.cpf_cnpj = i.cpf_cnpj_i\n",
     "    ORDER BY u.nome\n",
     "    \"\"\"\n",
-    "    df = pd.read_sql_query(query, cnx)\n",
+    "    df = pd.read_sql_query(query, engine)\n",
     "    return pn.widgets.Tabulator(df, show_index=False, sizing_mode='stretch_width', height=400)\n",
     "\n",
     "def on_consultar(w):\n",
@@ -416,7 +429,7 @@
     "        LEFT JOIN instituicao i ON u.cpf_cnpj = i.cpf_cnpj_i\n",
     "        WHERE u.cpf_cnpj = %s\n",
     "        \"\"\"\n",
-    "        df = pd.read_sql_query(query, cnx, params=(cpf_cnpj,))\n",
+    "        df = pd.read_sql_query(query, engine, params=(cpf_cnpj,))\n",
     "        return pn.widgets.Tabulator(df, show_index=False, sizing_mode='stretch_width', height=400)\n",
     "    except Exception as e:\n",
     "        return pn.pane.Alert(f'Erro na consulta: {str(e)}', alert_type='danger')\n",
@@ -543,10 +556,20 @@
     "    \"\"\"\n",
     "    Recebe booleans dos botões e executa a ação correspondente.\n",
     "    \"\"\"\n",
-    "    if cons: return on_consultar(w)\n",
-    "    if ins: return on_inserir(w)\n",
-    "    if atu: return on_atualizar(w)\n",
-    "    if exc: return on_excluir(w)\n"
+    "    if cons: \n",
+    "        return on_consultar(w)\n",
+    "    if ins: \n",
+    "        resultado = on_inserir(w)\n",
+    "        # Reseta formulário após sucesso\n",
+    "        if isinstance(resultado, pn.widgets.Tabulator):\n",
+    "            for key in w:\n",
+    "                if hasattr(w[key], 'value'):\n",
+    "                    w[key].value = \"\" if key != \"datanasc\" else None\n",
+    "        return resultado\n",
+    "    if atu: \n",
+    "        return on_atualizar(w)\n",
+    "    if exc: \n",
+    "        return on_excluir(w)\n"
    ]
   },
   {
@@ -655,7 +678,7 @@
     "    GROUP BY tipo\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        df = pd.read_sql_query(query, cnx)\n",
+    "        df = pd.read_sql_query(query, engine)\n",
     "        fig, ax = plt.subplots(figsize=(8, 6))\n",
     "        colors = ['#FF6B6B', '#4ECDC4', '#45B7D1']\n",
     "        ax.pie(df[\"quantidade\"], labels=df[\"tipo\"], autopct='%1.1f%%', colors=colors, startangle=90)\n",
@@ -676,7 +699,7 @@
     "    ORDER BY campanhas DESC\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        df = pd.read_sql_query(query, cnx)\n",
+    "        df = pd.read_sql_query(query, engine)\n",
     "        if df.empty:\n",
     "            return pn.pane.Alert('Nenhuma instituição cadastrada', alert_type='info')\n",
     "        \n",
@@ -698,7 +721,7 @@
     "    FROM usuario\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        df = pd.read_sql_query(query, cnx)\n",
+    "        df = pd.read_sql_query(query, engine)\n",
     "        fig, ax = plt.subplots(figsize=(8, 5))\n",
     "        ax.bar(df[\"categoria\"], df[\"total\"], color='#FF6B6B', width=0.5)\n",
     "        ax.set_ylabel(\"Quantidade\")\n",
@@ -748,13 +771,133 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ead1f9b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ===== TELA DE CAMPANHAS =====\n",
+    "\n",
+    "def get_instituicoes():\n",
+    "    \"\"\"Busca todas as instituições cadastradas\"\"\"\n",
+    "    try:\n",
+    "        query = \"\"\"\n",
+    "        SELECT DISTINCT u.cpf_cnpj, u.nome\n",
+    "        FROM usuario u\n",
+    "        JOIN instituicao i ON u.cpf_cnpj = i.cpf_cnpj_i\n",
+    "        ORDER BY u.nome\n",
+    "        \"\"\"\n",
+    "        df = pd.read_sql_query(query, engine)\n",
+    "        return dict(zip(df['nome'], df['cpf_cnpj']))\n",
+    "    except Exception as e:\n",
+    "        return {}\n",
+    "\n",
+    "# Widgets para campanhas\n",
+    "instituicoes_dict = get_instituicoes()\n",
+    "instituicoes_select = pn.widgets.Select(\n",
+    "    name=\"Instituição\",\n",
+    "    options=instituicoes_dict,\n",
+    "    sizing_mode=\"stretch_width\"\n",
+    ")\n",
+    "\n",
+    "nome_campanha = pn.widgets.TextInput(\n",
+    "    name=\"Nome da Campanha\",\n",
+    "    placeholder=\"Digite o nome da campanha\",\n",
+    "    sizing_mode=\"stretch_width\"\n",
+    ")\n",
+    "\n",
+    "data_inicio = pn.widgets.DatePicker(\n",
+    "    name=\"Data de Início\",\n",
+    "    sizing_mode=\"stretch_width\"\n",
+    ")\n",
+    "\n",
+    "data_fim = pn.widgets.DatePicker(\n",
+    "    name=\"Data de Término\",\n",
+    "    sizing_mode=\"stretch_width\"\n",
+    ")\n",
+    "\n",
+    "# Botões de ações para campanhas\n",
+    "btn_criar_campanha = pn.widgets.Button(name='Criar Campanha', button_type='success')\n",
+    "btn_consultar_campanhas = pn.widgets.Button(name='Consultar Campanhas', button_type='primary')\n",
+    "\n",
+    "def on_criar_campanha(event):\n",
+    "    \"\"\"Cria uma nova campanha\"\"\"\n",
+    "    try:\n",
+    "        if not instituicoes_select.value or not nome_campanha.value:\n",
+    "            return pn.pane.Alert('Instituição e Nome são obrigatórios!', alert_type='warning')\n",
+    "        \n",
+    "        cursor = con.cursor()\n",
+    "        cursor.execute(\n",
+    "            \"\"\"INSERT INTO campanha(cpf_cnpj_i, nome, data_inicio, data_fim, status) \n",
+    "               VALUES (%s, %s, %s, %s, %s)\"\"\",\n",
+    "            (instituicoes_select.value, nome_campanha.value,\n",
+    "             data_inicio.value, data_fim.value, 'Planejada')\n",
+    "        )\n",
+    "        con.commit()\n",
+    "        cursor.close()\n",
+    "        pn.state.notifications.success('Campanha criada com sucesso!')\n",
+    "        \n",
+    "        # Limpar campos\n",
+    "        nome_campanha.value = \"\"\n",
+    "        data_inicio.value = None\n",
+    "        data_fim.value = None\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        con.rollback()\n",
+    "        cursor.close()\n",
+    "        return pn.pane.Alert(f'Erro ao criar campanha: {str(e)}', alert_type='danger')\n",
+    "\n",
+    "def on_consultar_campanhas(event):\n",
+    "    \"\"\"Consulta todas as campanhas\"\"\"\n",
+    "    try:\n",
+    "        query = \"\"\"\n",
+    "        SELECT c.id_campanha, u.nome AS instituicao, c.nome, \n",
+    "               c.data_inicio, c.data_fim, c.status\n",
+    "        FROM campanha c\n",
+    "        JOIN instituicao i ON c.cpf_cnpj_i = i.cpf_cnpj_i\n",
+    "        JOIN usuario u ON i.cpf_cnpj_i = u.cpf_cnpj\n",
+    "        ORDER BY c.data_inicio DESC\n",
+    "        \"\"\"\n",
+    "        df = pd.read_sql_query(query, engine)\n",
+    "        return pn.widgets.Tabulator(df, show_index=False, sizing_mode='stretch_width', height=400)\n",
+    "    except Exception as e:\n",
+    "        return pn.pane.Alert(f'Erro ao consultar: {str(e)}', alert_type='danger')\n",
+    "\n",
+    "btn_criar_campanha.on_click(on_criar_campanha)\n",
+    "\n",
+    "def create_campanhas_view():\n",
+    "    \"\"\"Cria a tela de campanhas\"\"\"\n",
+    "    campanhas_layout = pn.Column(\n",
+    "        pn.pane.Markdown(\"### 📢 Gerenciador de Campanhas\"),\n",
+    "        pn.pane.Markdown(\"**Criar Nova Campanha**\"),\n",
+    "        instituicoes_select,\n",
+    "        nome_campanha,\n",
+    "        data_inicio,\n",
+    "        data_fim,\n",
+    "        pn.Row(btn_criar_campanha, btn_consultar_campanhas),\n",
+    "        pn.Spacer(height=20),\n",
+    "        pn.bind(on_consultar_campanhas, btn_consultar_campanhas),\n",
+    "        create_btn_voltar(),\n",
+    "        sizing_mode='stretch_width',\n",
+    "        margin=(20, 20, 20, 20)\n",
+    "    )\n",
+    "    return campanhas_layout\n",
+    "\n",
+    "def go_to_campanhas():\n",
+    "    main_area.clear()\n",
+    "    main_area.append(create_campanhas_view())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1ce79858",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Conecta os botões da Home às funções de navegação\n",
     "btn_go_crud.on_click(lambda event: go_to_crud())\n",
-    "btn_go_graficos.on_click(lambda event: go_to_graficos())"
+    "btn_go_graficos.on_click(lambda event: go_to_graficos())\n",
+    "btn_go_campanhas.on_click(lambda event: go_to_campanhas())\n"
    ]
   },
   {
