tela gerenciamento de campanhas adicionada

--- a/python/CRUD-panel.ipynb
+++ b/python/CRUD-panel.ipynb
@@ -815,36 +815,19 @@
     "    sizing_mode=\"stretch_width\"\n",
     ")\n",
     "\n",
-    "# Botões de ações para campanhas\n",
-    "btn_criar_campanha = pn.widgets.Button(name='Criar Campanha', button_type='success')\n",
-    "btn_consultar_campanhas = pn.widgets.Button(name='Consultar Campanhas', button_type='primary')\n",
+    "status_campanha = pn.widgets.Select(\n",
+    "    name=\"Status\",\n",
+    "    options=[\"Planejada\", \"Ativa\", \"Inativa\", \"Concluída\"],\n",
+    "    value=\"Planejada\",\n",
+    "    sizing_mode=\"stretch_width\"\n",
+    ")\n",
     "\n",
-    "def on_criar_campanha(event):\n",
-    "    \"\"\"Cria uma nova campanha\"\"\"\n",
-    "    try:\n",
-    "        if not instituicoes_select.value or not nome_campanha.value:\n",
-    "            return pn.pane.Alert('Instituição e Nome são obrigatórios!', alert_type='warning')\n",
-    "        \n",
-    "        cursor = con.cursor()\n",
-    "        cursor.execute(\n",
-    "            \"\"\"INSERT INTO campanha(cpf_cnpj_i, nome, data_inicio, data_fim, status) \n",
-    "               VALUES (%s, %s, %s, %s, %s)\"\"\",\n",
-    "            (instituicoes_select.value, nome_campanha.value,\n",
-    "             data_inicio.value, data_fim.value, 'Planejada')\n",
-    "        )\n",
-    "        con.commit()\n",
-    "        cursor.close()\n",
-    "        pn.state.notifications.success('Campanha criada com sucesso!')\n",
-    "        \n",
-    "        # Limpar campos\n",
-    "        nome_campanha.value = \"\"\n",
-    "        data_inicio.value = None\n",
-    "        data_fim.value = None\n",
-    "        \n",
-    "    except Exception as e:\n",
-    "        con.rollback()\n",
-    "        cursor.close()\n",
-    "        return pn.pane.Alert(f'Erro ao criar campanha: {str(e)}', alert_type='danger')\n",
+    "# Botões de ações para campanhas\n",
+    "btn_consultar_campanhas = pn.widgets.Button(name='Consultar', button_type='primary')\n",
+    "btn_criar_campanha = pn.widgets.Button(name='Inserir', button_type='success')\n",
+    "btn_atualizar_campanha = pn.widgets.Button(name='Atualizar', button_type='warning')\n",
+    "btn_excluir_campanha = pn.widgets.Button(name='Excluir', button_type='danger')\n",
+    "btn_ativar_inativar = pn.widgets.Button(name='Ativar/Inativar', button_type='light')\n",
     "\n",
     "def on_consultar_campanhas(event):\n",
     "    \"\"\"Consulta todas as campanhas\"\"\"\n",
@@ -862,18 +845,183 @@
     "    except Exception as e:\n",
     "        return pn.pane.Alert(f'Erro ao consultar: {str(e)}', alert_type='danger')\n",
     "\n",
+    "def on_criar_campanha(event):\n",
+    "    \"\"\"Cria uma nova campanha\"\"\"\n",
+    "    try:\n",
+    "        if not instituicoes_select.value or not nome_campanha.value:\n",
+    "            pn.state.notifications.warning('Instituição e Nome são obrigatórios!')\n",
+    "            return\n",
+    "        \n",
+    "        cursor = con.cursor()\n",
+    "        cursor.execute(\n",
+    "            \"\"\"INSERT INTO campanha(cpf_cnpj_i, nome, data_inicio, data_fim, status) \n",
+    "               VALUES (%s, %s, %s, %s, %s)\"\"\",\n",
+    "            (instituicoes_select.value, nome_campanha.value,\n",
+    "             data_inicio.value, data_fim.value, status_campanha.value)\n",
+    "        )\n",
+    "        con.commit()\n",
+    "        cursor.close()\n",
+    "        pn.state.notifications.success('Campanha criada com sucesso!')\n",
+    "        \n",
+    "        # Limpar campos\n",
+    "        nome_campanha.value = \"\"\n",
+    "        data_inicio.value = None\n",
+    "        data_fim.value = None\n",
+    "        status_campanha.value = \"Planejada\"\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        con.rollback()\n",
+    "        if 'cursor' in locals():\n",
+    "            cursor.close()\n",
+    "        pn.state.notifications.error(f'Erro ao criar: {str(e)}')\n",
+    "\n",
+    "def on_atualizar_campanha(event):\n",
+    "    \"\"\"Atualiza uma campanha existente com novos dados\"\"\"\n",
+    "    try:\n",
+    "        if not instituicoes_select.value or not nome_campanha.value:\n",
+    "            pn.state.notifications.warning('Instituição e Nome da Campanha são obrigatórios!')\n",
+    "            return\n",
+    "        \n",
+    "        cursor = con.cursor()\n",
+    "        \n",
+    "        # Verifica se a campanha existe\n",
+    "        cursor.execute(\n",
+    "            \"SELECT id_campanha FROM campanha WHERE cpf_cnpj_i=%s AND nome=%s\",\n",
+    "            (instituicoes_select.value, nome_campanha.value)\n",
+    "        )\n",
+    "        result = cursor.fetchone()\n",
+    "        \n",
+    "        if not result:\n",
+    "            cursor.close()\n",
+    "            pn.state.notifications.warning('Campanha não encontrada!')\n",
+    "            return\n",
+    "        \n",
+    "        # Atualiza a campanha com os novos dados\n",
+    "        cursor.execute(\n",
+    "            \"\"\"UPDATE campanha SET data_inicio=%s, data_fim=%s, status=%s\n",
+    "               WHERE cpf_cnpj_i=%s AND nome=%s\"\"\",\n",
+    "            (data_inicio.value, data_fim.value, status_campanha.value,\n",
+    "             instituicoes_select.value, nome_campanha.value)\n",
+    "        )\n",
+    "        con.commit()\n",
+    "        cursor.close()\n",
+    "        pn.state.notifications.success('Campanha atualizada com sucesso!')\n",
+    "        \n",
+    "        # Limpar campos\n",
+    "        data_inicio.value = None\n",
+    "        data_fim.value = None\n",
+    "        status_campanha.value = \"Planejada\"\n",
+    "        nome_campanha.value = \"\"\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        con.rollback()\n",
+    "        if 'cursor' in locals():\n",
+    "            cursor.close()\n",
+    "        pn.state.notifications.error(f'Erro ao atualizar: {str(e)}')\n",
+    "\n",
+    "def on_excluir_campanha(event):\n",
+    "    \"\"\"Exclui uma campanha\"\"\"\n",
+    "    try:\n",
+    "        if not instituicoes_select.value or not nome_campanha.value:\n",
+    "            pn.state.notifications.warning('Instituição e Nome da Campanha são obrigatórios!')\n",
+    "            return\n",
+    "        \n",
+    "        cursor = con.cursor()\n",
+    "        \n",
+    "        # Verifica se a campanha existe\n",
+    "        cursor.execute(\n",
+    "            \"SELECT id_campanha FROM campanha WHERE cpf_cnpj_i=%s AND nome=%s\",\n",
+    "            (instituicoes_select.value, nome_campanha.value)\n",
+    "        )\n",
+    "        result = cursor.fetchone()\n",
+    "        \n",
+    "        if not result:\n",
+    "            cursor.close()\n",
+    "            pn.state.notifications.warning('Campanha não encontrada!')\n",
+    "            return\n",
+    "        \n",
+    "        # Deleta a campanha\n",
+    "        cursor.execute(\n",
+    "            \"DELETE FROM campanha WHERE cpf_cnpj_i=%s AND nome=%s\",\n",
+    "            (instituicoes_select.value, nome_campanha.value)\n",
+    "        )\n",
+    "        con.commit()\n",
+    "        cursor.close()\n",
+    "        pn.state.notifications.success('Campanha excluída com sucesso!')\n",
+    "        \n",
+    "        # Limpar campos\n",
+    "        nome_campanha.value = \"\"\n",
+    "        data_inicio.value = None\n",
+    "        data_fim.value = None\n",
+    "        status_campanha.value = \"Planejada\"\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        con.rollback()\n",
+    "        if 'cursor' in locals():\n",
+    "            cursor.close()\n",
+    "        pn.state.notifications.error(f'Erro ao excluir: {str(e)}')\n",
+    "\n",
+    "def on_ativar_inativar(event):\n",
+    "    \"\"\"Alterna o status da campanha entre Ativa e Inativa\"\"\"\n",
+    "    try:\n",
+    "        if not instituicoes_select.value or not nome_campanha.value:\n",
+    "            pn.state.notifications.warning('Instituição e Nome da Campanha são obrigatórios!')\n",
+    "            return\n",
+    "        \n",
+    "        cursor = con.cursor()\n",
+    "        cursor.execute(\n",
+    "            \"SELECT status FROM campanha WHERE cpf_cnpj_i=%s AND nome=%s\",\n",
+    "            (instituicoes_select.value, nome_campanha.value)\n",
+    "        )\n",
+    "        result = cursor.fetchone()\n",
+    "        \n",
+    "        if not result:\n",
+    "            cursor.close()\n",
+    "            pn.state.notifications.warning('Campanha não encontrada!')\n",
+    "            return\n",
+    "        \n",
+    "        status_atual = result[0]\n",
+    "        novo_status = 'Inativa' if status_atual == 'Ativa' else 'Ativa'\n",
+    "        \n",
+    "        cursor.execute(\n",
+    "            \"UPDATE campanha SET status=%s WHERE cpf_cnpj_i=%s AND nome=%s\",\n",
+    "            (novo_status, instituicoes_select.value, nome_campanha.value)\n",
+    "        )\n",
+    "        con.commit()\n",
+    "        cursor.close()\n",
+    "        pn.state.notifications.success(f'Campanha alterada para {novo_status}!')\n",
+    "        \n",
+    "        # Atualizar o widget e limpar\n",
+    "        status_campanha.value = novo_status\n",
+    "        nome_campanha.value = \"\"\n",
+    "        data_inicio.value = None\n",
+    "        data_fim.value = None\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        con.rollback()\n",
+    "        if 'cursor' in locals():\n",
+    "            cursor.close()\n",
+    "        pn.state.notifications.error(f'Erro ao alterar status: {str(e)}')\n",
+    "\n",
+    "btn_consultar_campanhas.on_click(on_consultar_campanhas)\n",
     "btn_criar_campanha.on_click(on_criar_campanha)\n",
+    "btn_atualizar_campanha.on_click(on_atualizar_campanha)\n",
+    "btn_excluir_campanha.on_click(on_excluir_campanha)\n",
+    "btn_ativar_inativar.on_click(on_ativar_inativar)\n",
     "\n",
     "def create_campanhas_view():\n",
     "    \"\"\"Cria a tela de campanhas\"\"\"\n",
     "    campanhas_layout = pn.Column(\n",
     "        pn.pane.Markdown(\"### 📢 Gerenciador de Campanhas\"),\n",
-    "        pn.pane.Markdown(\"**Criar Nova Campanha**\"),\n",
+    "        pn.pane.Markdown(\"**Preencha os dados para gerenciar campanhas**\"),\n",
     "        instituicoes_select,\n",
     "        nome_campanha,\n",
     "        data_inicio,\n",
     "        data_fim,\n",
-    "        pn.Row(btn_criar_campanha, btn_consultar_campanhas),\n",
+    "        status_campanha,\n",
+    "        pn.Row(btn_consultar_campanhas, btn_criar_campanha),\n",
+    "        pn.Row(btn_atualizar_campanha, btn_excluir_campanha),\n",
+    "        pn.Row(btn_ativar_inativar),\n",
     "        pn.Spacer(height=20),\n",
     "        pn.bind(on_consultar_campanhas, btn_consultar_campanhas),\n",
     "        create_btn_voltar(),\n",
