98% do sitema concluido

--- a/python/CRUD-panel.ipynb
+++ b/python/CRUD-panel.ipynb
@@ -732,7 +732,57 @@
     "            ax.text(i, v + 1, str(v), ha='center', va='bottom', fontsize=14, fontweight='bold')\n",
     "        return pn.pane.Matplotlib(fig, tight=True, sizing_mode='stretch_width')\n",
     "    except Exception as e:\n",
-    "        return pn.pane.Alert(f'Erro ao gerar gráfico: {str(e)}', alert_type='danger')\n"
+    "        return pn.pane.Alert(f'Erro ao gerar gráfico: {str(e)}', alert_type='danger')\n",
+    "    \n",
+    "\n",
+    "def grafico_doacoes_por_campanha():\n",
+    "    \"\"\"Gráfico mostrando doações por campanha (Instituição - Campanha)\"\"\"\n",
+    "    query = \"\"\"\n",
+    "    SELECT \n",
+    "        u.nome || ' - ' || c.nome AS instituicao_campanha,\n",
+    "        COUNT(d.id_doacao) AS total_doacoes\n",
+    "    FROM campanha c\n",
+    "    JOIN instituicao i ON c.cpf_cnpj_i = i.cpf_cnpj_i\n",
+    "    JOIN usuario u ON i.cpf_cnpj_i = u.cpf_cnpj\n",
+    "    LEFT JOIN doacao d ON c.id_campanha = d.id_campanha\n",
+    "    GROUP BY u.nome, c.nome, c.id_campanha\n",
+    "    ORDER BY total_doacoes DESC\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        df = pd.read_sql_query(query, engine)\n",
+    "\n",
+    "        if df.empty:\n",
+    "            return pn.pane.Alert(\n",
+    "                'Nenhuma campanha cadastrada.',\n",
+    "                alert_type='info'\n",
+    "            )\n",
+    "\n",
+    "        fig, ax = plt.subplots(figsize=(12, 7))\n",
+    "\n",
+    "        ax.barh(df[\"instituicao_campanha\"], df[\"total_doacoes\"])\n",
+    "        ax.set_xlabel(\"Quantidade de Doações\")\n",
+    "        ax.set_ylabel(\"Instituição - Campanha\")\n",
+    "        ax.set_title(\"Doações Arrecadadas por Campanha\")\n",
+    "\n",
+    "        # Exibe o valor ao lado da barra\n",
+    "        for i, v in enumerate(df[\"total_doacoes\"]):\n",
+    "            ax.text(v + 0.1, i, str(v), va='center')\n",
+    "\n",
+    "        plt.tight_layout()\n",
+    "\n",
+    "        return pn.pane.Matplotlib(\n",
+    "            fig,\n",
+    "            tight=True,\n",
+    "            sizing_mode='stretch_width'\n",
+    "        )\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        return pn.pane.Alert(\n",
+    "            f'Erro ao gerar gráfico: {str(e)}',\n",
+    "            alert_type='danger'\n",
+    "        )\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -750,6 +800,7 @@
     "            pn.Column(grafico_distribuicao_por_tipo(), sizing_mode='stretch_width')\n",
     "        ),\n",
     "        pn.Column(grafico_instituicoes(), sizing_mode='stretch_width'),\n",
+    "        pn.Column(grafico_doacoes_por_campanha(), sizing_mode='stretch_width'),\n",
     "        create_btn_voltar(),\n",
     "        sizing_mode='stretch_width',\n",
     "        margin=(20,20,20,20)\n",
