Fixed fail to load previous window on "go home" button

--- a/python/CRUD-panel.ipynb
+++ b/python/CRUD-panel.ipynb
@@ -118,6 +118,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "41fcdebf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import panel as pn\n",
+    "\n",
+    "pn.extension(\n",
+    "    disconnect_delay=10000,\n",
+    "    reconnect_delay=2000,\n",
+    "    reconnect_attempts=10,\n",
+    "    sizing_mode='stretch_width',\n",
+    "    notifications=True,\n",
+    "    'tabulator'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a59cae77",
    "metadata": {},
    "outputs": [],
@@ -190,30 +209,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfa0df33-e161-45d6-a99e-d9ac689cf753",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Inicializa as extensões do Panel necessárias:\n",
-    "# - Tabulator para tabelas interativas\n",
-    "# - Notificações na interface\n",
-    "\n",
-    "pn.extension()\n",
-    "pn.extension('tabulator')\n",
-    "pn.extension(notifications=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "224f5c25",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Criação da Home sem conectar os cliques ainda\n",
+    "# Criação dos botões principais (mantém referências fixas)\n",
     "btn_go_crud = pn.widgets.Button(name=\"📋 Ir para CRUD\", button_type=\"primary\", width=250)\n",
     "btn_go_graficos = pn.widgets.Button(name=\"📊 Ir para Gráficos\", button_type=\"success\", width=250)\n",
-    "# btn_voltar_home = pn.widgets.Button(name='⬅ Voltar para Home', button_type='default')"
+    "btn_voltar_home = pn.widgets.Button(name='⬅ Voltar para Home', button_type='default')"
    ]
   },
   {
@@ -260,9 +263,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "btn_voltar_home.on_click(lambda e: go_to_home())\n",
+    "\n",
     "def create_btn_voltar():\n",
-    "    btn_voltar_home = pn.widgets.Button(name='⬅ Voltar para Home', button_type='default')\n",
-    "    btn_voltar_home.on_click(lambda e: main_area.clear() or main_area.append(create_home_view()))\n",
     "    return btn_voltar_home"
    ]
   },
